[core] MAINT - update deprecated method call